se agrega sesiones y pruebas

--- a/templates/agregarusuario.html
+++ b/templates/agregarusuario.html
@@ -19,7 +19,7 @@
         <input type="password" required name="contrasena"><br><br>
         <label for="conficontra">Confirma Contraseña: </label>
         <input type="password" required name="conficontra"><br><br>
-        <button>Ingresar</button>
+        <button>Guardar</button>
     </form>
 </body>
 </html>
