--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <h3>Digite sus credenciales de acceso</h3><br>
     <br>
     <form action="/login" method="post">
-        <label for="id">Id: </label>
+        <label for="id">Id Usuario: </label>
         <input type="text" required name="id"><br>
         <label for="contra">Contraseña: </label>
         <input type="password" required name="contrasena"><br><br>
