--- a/templates/principal.html
+++ b/templates/principal.html
@@ -17,6 +17,7 @@
                 <th>Nombre</th>
                 <th>Rol</th>
                 <th>Foto</th>
+                <th>Acciones</th>
             </tr>
         </thead>
         <tbody>
@@ -33,6 +34,9 @@
                     </td>
                     <td>
                         <img width="100" src="uploads/{{ u[4] }}" alt="">
+                    </td>
+                    <td>
+                        <a href="/editausuario/{{u[0]}}/0">Editar</a>
                     </td>
                 </tr>
             {% endfor %}
