--- a/templates/editausuario.html
+++ b/templates/editausuario.html
@@ -24,10 +24,10 @@
         <input type="file" name="foto">
         <br>
         <label for="contra">Contraseña:</label>
-        <input required type="password" name="contra" >
+        <input type="password" name="contra" >
         <br>
         <label for="confir">Confima Contraseña:</label>
-        <input required type="password" name="confir" >
+        <input type="password" name="confir" >
         <br><br>
         <button>Guardar</button>
     </form> 
